Fixat länkar för seminarierna

--- a/seminarier.HTML
+++ b/seminarier.HTML
@@ -90,7 +90,7 @@ Catrin Mattsson, IATA:s chef i Norden och Baltikum, informerar om vad flygbransc
 <b>Pris och anmälan:</b> Gratis för medlemmar. 1000 kr för icke medlemmar.<br>
 <b>Anmälan senast 12 mars</b>
 <div class = "text-center"> 
-<a class="btn btn-primary " href="#" role="button">Anmälan</a>
+<a class="btn btn-primary " href="Anmalan.html" role="button">Anmälan</a>
 </div>
    </div>
    
@@ -111,7 +111,7 @@ Seminarium/webinar där vi går igenom hur man besvarar ärenden som hamnat i Al
 <b>Anmälan senast 10 september</b> 
 <br>
 <div class = "text-center"> 
-<a class="btn btn-primary " href="#" role="button">Anmälan</a>
+<a class="btn btn-primary " href="Anmalan.html" role="button">Anmälan</a>
 </div>
    </div>
    
@@ -127,7 +127,7 @@ Catrin Mattsson, IATA:s chef i Norden och Baltikum, informerar om vad flygbransc
 <b>Pris och anmälan:</b> Gratis för medlemmar. 1000 kr för icke medlemmar.<br>
 <b>Anmälan senast 12 mars</b>
 <div class = "text-center"> 
-<a class="btn btn-primary " href="#" role="button">Anmälan</a>
+<a class="btn btn-primary " href="Anmalan.html" role="button">Anmälan</a>
 </div>
    </div>
    
@@ -141,7 +141,7 @@ Seminarium/webinar där vi går igenom hur man besvarar ärenden som hamnat i Al
 <b>Anmälan senast 10 september</b> 
 <br>
 <div class = "text-center"> 
-<a class="btn btn-primary " href="#" role="button">Anmälan</a>
+<a class="btn btn-primary " href="Anmalan.html" role="button">Anmälan</a>
 </div>
    </div>
    
@@ -155,7 +155,7 @@ Seminarium/webinar där vi går igenom hur man besvarar ärenden som hamnat i Al
 <b>Anmälan senast 10 september</b> 
 <br>
 <div class = "text-center"> 
-<a class="btn btn-primary " href="#" role="button">Anmälan</a>
+<a class="btn btn-primary " href="Anmalan.html" role="button">Anmälan</a>
 </div>
    </div>
    
